--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,12 +8,12 @@
 
     <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/ic_money_transfer"
         android:title="@string/title_loans" />
 
     <item
         android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_person_black_24dp"
+        android:icon="@drawable/ic_loan_2"
         android:title="@string/title_profile" />
 
 </menu>
