--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,7 +13,7 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.cristianvillamil.platziwallet.ui.dashboard.DashboardFragment"
+        android:name="com.cristianvillamil.platziwallet.ui.dashboard.TransferFragment"
         android:label="@string/title_loans"
         tools:layout="@layout/fragment_transfer" />
 
