--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
@@ -97,7 +98,8 @@
                     app:layout_constraintBottom_toTopOf="@id/notificationButton"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@id/horizontalGuide"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:src="@tools:sample/avatars" />
 
                 <ImageView
                     android:id="@+id/notificationButton"
@@ -144,9 +146,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:cpb_background_progressbar_color="@color/divider"
-                    app:cpb_progress="70"
                     app:cpb_progressbar_color="@color/primary"
                     app:cpb_progressbar_width="4dp"
+                    app:cpb_round_border="true"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -248,6 +250,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/transferLimitAmountCardView"
             app:layout_constraintStart_toStartOf="@id/transferLimitAmountCardView"
-            app:layout_constraintTop_toBottomOf="@id/transferTitleTextView" />
+            app:layout_constraintTop_toBottomOf="@id/transferTitleTextView"
+            tools:listitem="@layout/favorite_transfer_row" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
