--- a/app/src/main/res/layout/favorite_transfer_row.xml
+++ b/app/src/main/res/layout/favorite_transfer_row.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginEnd="8dp"
     android:backgroundTint="@color/primary_dark"
     app:cardCornerRadius="10dp">
@@ -17,6 +18,7 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profilePhotoImageView"
+            tools:src="@tools:sample/avatars"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginStart="12dp"
