--- a/app/src/main/res/layout/fragment_loans.xml
+++ b/app/src/main/res/layout/fragment_loans.xml
@@ -1,23 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:background="@drawable/bottom_corners_bg"
         android:elevation="5dp"
         app:layout_constraintBottom_toTopOf="@+id/topGuide"
-        android:layout_width="match_parent"
-        android:layout_height="0dp" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/loans_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="36dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="36dp"
+            android:fontFamily="@font/montserrat_bold"
+            android:gravity="center"
+            android:text="Porcentaje total pagado"
+            android:textColor="@color/primary_text"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.mikhaellopez.circularprogressbar.CircularProgressBar
+            android:id="@+id/circularProgress"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_margin="16dp"
+            app:cpb_progress_max="100"
+            app:cpb_progressbar_color="@color/translucent_white"
+            app:cpb_round_border="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/loans_title" />
+
+        <TextView
+            android:id="@+id/percentageText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_light"
+            android:text="70%"
+            android:textColor="@color/primary_text"
+            android:textSize="30sp"
+            app:layout_constraintBottom_toBottomOf="@id/circularProgress"
+            app:layout_constraintEnd_toEndOf="@id/circularProgress"
+            app:layout_constraintStart_toStartOf="@id/circularProgress"
+            app:layout_constraintTop_toTopOf="@id/circularProgress" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/topGuide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintGuide_percent="0.4"
-        android:orientation="horizontal" />
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.3" />
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/loansRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/topGuide"
+        tools:listitem="@layout/loan_row" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
