--- a/app/src/main/res/layout/fragment_loans.xml
+++ b/app/src/main/res/layout/fragment_loans.xml
@@ -67,7 +67,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/loansRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/topGuide"
         tools:listitem="@layout/loan_row" />
 
